frontend/test/should_fail/defYield_006i.grg
using defYield;

rule t
{
	pp:p();
	modify {
		def x:B;
		y:B;
		pp(x, y);
	}
}

pattern p modify (x:B, def z:B)
{
	modify {
		eval { yield z = x; }
	}
}

